[toolkit.helm/agility-gnome]
name = "autoupdating...install-test"
version = "10.02.12"
description = ""
authors = ["ZACHRY WOOD <zachryiixixiiwood@gmail.com>"]

[toolkit.potter.doppler.dependencies]
python = "^2.7"
requests = "*"

[toolkit.potter.doppler.dependencies]

[build-system]
requires = ["potter>=0.12"]
build_script = "potter.m
brick-and-mortar.API"
